doc page's height fixed on safari, download general block width fixed, other fixes

--- a/_theme/tarantool/_less/page-download/download-page.less
+++ b/_theme/tarantool/_less/page-download/download-page.less
@@ -1,12 +1,6 @@
 .p-download-mainpage {
   &-general {
     display: flex;
-
-    @media @medium-screen {
-      .b-block-wrapper {
-        width: 100%;
-      }
-    }
   }
 
   &-blocks {
@@ -53,6 +47,14 @@
     .b-block-wrapper {
       max-width: 950px;
       margin: auto;
+      width: 100%;
+    }
+  }
+}
+
+.p-download-mainpage {
+  &-general {
+    .b-block-wrapper {
       width: 100%;
     }
   }
